Alignment and padding fixes

--- a/popup.css
+++ b/popup.css
@@ -263,7 +263,6 @@ Smart Folder List
 .slist_item_name {
     flex-grow: 1;
     margin-left: 5px;
-    margin-right: 5px;
 }
 .slist_item_bottom_row {
     height: 25px;
@@ -275,10 +274,9 @@ Smart Folder List
 }
 .slist_item_delete {
     position: relative;
-    top: -2px;
     background: url("http://phoneexpander.com/images/button_close.png") no-repeat center;
     background-size: 15px 15px;
-    height: 20px;
+    height: 100%;
     width: 20px;
     opacity: 0.5;
 }
